This is second commt or you can it is a revert

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1 id="company-title">My Github</h1>
+    <h1 id="company-title">My NewsPaper</h1>
     <p id="date">06/11/2022</p>
     <p id="time">10:22pm</p>
     <hr id="top-border" />
